fix(portal-next): text overflow in API documentation

--- a/gravitee-apim-portal-webui-next/src/app/api/api-details/api-tab-documentation/api-tab-documentation.component.scss
+++ b/gravitee-apim-portal-webui-next/src/app/api/api-details/api-tab-documentation/api-tab-documentation.component.scss
@@ -32,4 +32,14 @@
       top: 96px;
     }
   }
+
+  &__page-content {
+    width: 100%;
+    overflow-wrap: break-word;
+    word-wrap: break-word;
+
+    &__container {
+      min-width: 0;
+    }
+  }
 }
